--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dependency_visitor
-description: Visits root package, transitive and immediate dependencies in order to search given file.
-version: 0.1.3
+description: Visits root package, transitive and immediate dependencies in order to search given files.
+version: 0.1.4
 homepage: https://github.com/owczaro/dependency_visitor
 
 environment:
@@ -10,7 +10,7 @@ dependencies:
   effective_dart: ^1.2.4
   path: ^1.7.0
   yaml: ^2.2.1
-  equatable: ^1.2.3
+  equatable: ^1.2.4
   pubspec_lock: ^2.0.1
   meta: ^1.2.2
   universal_io: ^1.0.1
