--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,18 @@
 name: dependency_visitor
 description: Visits root package, transitive and immediate dependencies in order to search given files.
-version: 0.1.4
+version: 1.0.0
 homepage: https://github.com/owczaro/dependency_visitor
 
 environment:
-  sdk: '>=2.8.1 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  effective_dart: ^1.2.4
-  path: ^1.7.0
-  yaml: ^2.2.1
-  equatable: ^1.2.4
-  pubspec_lock: ^2.0.1
-  meta: ^1.2.2
-  universal_io: ^1.0.1
+  effective_dart: ^1.3.1
+  path: ^1.8.0
+  equatable: ^2.0.0
+  universal_io: ^2.0.1
+  yaml: ^3.1.0
+  pubspec_lock_reader: ^1.0.1
 
 dev_dependencies:
-  test: ^1.14.4
+  test: ^1.16.8
